--- a/shop/static/css/base.css
+++ b/shop/static/css/base.css
@@ -292,10 +292,13 @@ ul.errorlist {
 
 .recommendations div {
     float:left;
+		margin: 0 0 60px 0;
 }
 
 .recommendations img {
-    width:200px
+    width:200px;
+		border: solid 1px #5993bb;
+		margin: 0 20px 20px 0;
 }
 
 .recommendations p {
