--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -7,7 +7,7 @@
 
 {% block content %}
   <div class="product-detail">
-    <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}" alt="Изображение товара">
+    <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}" alt="Фото {{ product.name }}">
     <h1>{{ product.name }}</h1>
      <h2>
        <a href="{% url 'shop:product_list' %}?category={{ product.category.slug }}">
