--- a/shop/static/css/base.css
+++ b/shop/static/css/base.css
@@ -126,8 +126,9 @@ ul.errorlist {
 #subheader {
     background:#ececec;
     color:#444;
-    padding:15px 100px;
+    padding: 15px 100px;
     overflow:auto;
+		text-align: right;
 }
 
 #header .logo {
