--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -15,6 +15,7 @@
        </a>
      </h2>
     <p class="price">{{ product.price }} ₽</p>
+		<p><b>Страна производства:</b> {{ product.country_name }}</p>
     {{ product.description|linebreaks }}
   </div>
 	
