--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="header">
-      <a href="/" class="logo">Магазин бытовой техники</a>
+      <a href="/" class="logo"><img src="{% static 'img/logo.png' %}"></a>
     </div>
     <div id="subheader">     
 			 {% if request.user.is_authenticated %}
